--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "fs-extra": "^6.0.1",
     "ganache-cli": "^6.1.0",
     "mocha": "^5.1.1",
