--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
     "fs-extra": "^6.0.1",
     "ganache-cli": "^6.1.0",
     "mocha": "^5.1.1",
